# project_assembling

computer simulator/: CMakeLists.txt
computer simulator /include/: CPU.h  Disk.h  GPU.h  Keyboard.h  RAM.h
computer simulator /src/: CMakeLists.txt  CPU.cpp  Disk.cpp  GPU.cpp  Keyboard.cpp  RAM.cpp  main.cpp
surgery_simulator(assignment1_project_assemble )/include/: tools.h
surgery_simulator(assignment1_project_assemble )/src/: Point.cpp  main.cpp
